--- a/templates/frontpage.html.j2
+++ b/templates/frontpage.html.j2
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
  <head>
   <title></title>
@@ -6,5 +7,5 @@
 {% for l_group in groups|sort %}
 Group <a href="groups/{{ l_group }}.html">{{ l_group }}</a> ({{ groups[l_group]|length }})<br/>
 {% endfor %}
- </body
+ </body>
 </html>
